Изменение структуры базы. Добавленна новая таблица хранения фото. Изменён перебор искомого текста

--- a/App.config
+++ b/App.config
@@ -7,7 +7,7 @@
           requirePermission="false"/>
     </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Your connetion string" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Server=ms-sql-9.in-solve.ru;Initial catalog=1gb_blacklist;User ID=1gb_torov-lab;Password=zd5b59c84yzx" providerName="System.Data.SqlClient" />
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
