--- a/BlackListAddSQL.csproj
+++ b/BlackListAddSQL.csproj
@@ -66,6 +66,7 @@
     <Compile Include="FeedBack.cs" />
     <Compile Include="FsspCode.cs" />
     <Compile Include="ImagesBase.cs" />
+    <Compile Include="ImgUrl.cs" />
     <Compile Include="MyDbContext.cs" />
     <Compile Include="PersonClass.cs" />
     <Compile Include="Program.cs" />
